--- a/disposable_email_blocklist.conf
+++ b/disposable_email_blocklist.conf
@@ -3026,7 +3026,9 @@ wilemail.com
 willhackforfood.biz
 willselfdestruct.com
 wimsg.com
+winemail.net
 winemaven.info
+winmails.net
 wins.com.br
 wlist.ro
 wmail.cf
